--- a/main.css
+++ b/main.css
@@ -310,6 +310,7 @@ button.login:hover{
     font-size: 15px;
     cursor: pointer;
 }
+.test{}
 input[placeholder]{
     padding: 10px;
     font-size: 15px;
